--- a/app/src/main/res/drawable/ic_word_folder.xml
+++ b/app/src/main/res/drawable/ic_word_folder.xml
@@ -1,13 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="105dp"
-    android:height="105dp"
-    android:viewportWidth="105"
-    android:viewportHeight="105">
+    android:width="24dp"
+    android:height="20dp"
+    android:viewportWidth="24"
+    android:viewportHeight="20">
   <path
-      android:pathData="M8.75,48.13H96.25M8.75,48.13V20.13C8.75,18.68 9.93,17.5 11.38,17.5H38.4C39.03,17.5 39.64,17.72 40.11,18.13L53.95,29.99C54.43,30.4 55.03,30.63 55.66,30.63H93.63C95.07,30.63 96.25,31.8 96.25,33.25V48.13H8.75ZM8.75,48.13V84.88C8.75,86.32 9.93,87.5 11.38,87.5H93.63C95.07,87.5 96.25,86.32 96.25,84.88V48.13H8.75Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="9"
-      android:fillColor="#00000000"
-      android:strokeColor="#0F172A"
-      android:strokeLineCap="round"/>
+      android:pathData="M14.459,3H20.432C20.848,3 21.261,3.087 21.642,3.255C22.024,3.423 22.366,3.669 22.647,3.977C22.928,4.285 23.142,4.648 23.275,5.043C23.408,5.438 23.457,5.856 23.42,6.272L22.464,16.771C22.396,17.517 22.052,18.21 21.5,18.715C20.947,19.22 20.226,19.5 19.478,19.5H3.954C3.206,19.5 2.484,19.22 1.932,18.715C1.379,18.21 1.035,17.517 0.968,16.771L0.012,6.272C-0.051,5.577 0.131,4.882 0.525,4.306L0.467,3C0.467,2.204 0.783,1.441 1.345,0.879C1.908,0.316 2.671,0 3.467,0H8.975C9.77,0 10.533,0.316 11.096,0.879L12.338,2.121C12.9,2.684 13.663,3 14.459,3ZM1.976,3.18C2.298,3.061 2.64,3.001 3.002,3H11.096L10.035,1.939C9.754,1.658 9.372,1.5 8.975,1.5H3.467C3.074,1.5 2.696,1.654 2.416,1.929C2.135,2.204 1.974,2.579 1.967,2.971L1.976,3.18Z"
+      android:fillColor="#4A4A4A"/>
 </vector>
