--- a/app/src/main/res/drawable/ic_word_bluetooth.xml
+++ b/app/src/main/res/drawable/ic_word_bluetooth.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="10"
       android:fillColor="#00000000"
-      android:strokeColor="#0F172A"
+      android:strokeColor="#4A4A4A"
       android:strokeLineCap="round"/>
 </vector>
