--- a/app/src/main/res/drawable/ic_word_download.xml
+++ b/app/src/main/res/drawable/ic_word_download.xml
@@ -1,20 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="119dp"
-    android:height="119dp"
-    android:viewportWidth="119"
-    android:viewportHeight="119">
+    android:width="17dp"
+    android:height="21dp"
+    android:viewportWidth="17"
+    android:viewportHeight="21">
   <path
-      android:pathData="M59.5,79.33L42.15,61.98M59.5,39.67V79.33V39.67ZM59.5,79.33L76.85,61.98L59.5,79.33Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="9.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#0F172A"
-      android:strokeLineCap="round"/>
+      android:pathData="M13.875,6H9V13.189L11.47,10.72C11.612,10.585 11.8,10.511 11.996,10.514C12.192,10.516 12.378,10.595 12.517,10.733C12.655,10.872 12.734,11.058 12.736,11.254C12.739,11.45 12.665,11.638 12.53,11.78L8.78,15.53C8.64,15.671 8.449,15.75 8.25,15.75C8.051,15.75 7.86,15.671 7.72,15.53L3.97,11.78C3.835,11.638 3.761,11.45 3.764,11.254C3.766,11.058 3.845,10.872 3.983,10.733C4.122,10.595 4.308,10.516 4.504,10.514C4.7,10.511 4.888,10.585 5.03,10.72L7.5,13.189V6H2.625C1.929,6.001 1.262,6.278 0.77,6.77C0.278,7.262 0.001,7.929 0,8.625V18.375C0.001,19.071 0.278,19.738 0.77,20.23C1.262,20.722 1.929,20.999 2.625,21H13.875C14.571,20.999 15.238,20.722 15.73,20.23C16.222,19.738 16.499,19.071 16.5,18.375V8.625C16.499,7.929 16.222,7.262 15.73,6.77C15.238,6.278 14.571,6.001 13.875,6Z"
+      android:fillColor="#4A4A4A"/>
   <path
-      android:pathData="M59.5,109.08C86.88,109.08 109.08,86.88 109.08,59.5C109.08,32.12 86.88,9.92 59.5,9.92C32.12,9.92 9.92,32.12 9.92,59.5C9.92,86.88 32.12,109.08 59.5,109.08Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="9.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#0F172A"
-      android:strokeLineCap="round"/>
+      android:pathData="M9,0.75C9,0.551 8.921,0.36 8.78,0.22C8.64,0.079 8.449,0 8.25,0C8.051,0 7.86,0.079 7.72,0.22C7.579,0.36 7.5,0.551 7.5,0.75V6H9V0.75Z"
+      android:fillColor="#4A4A4A"/>
 </vector>
