--- a/app/src/main/res/drawable/ic_word_map.xml
+++ b/app/src/main/res/drawable/ic_word_map.xml
@@ -1,45 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="122dp"
-    android:height="122dp"
-    android:viewportWidth="122"
-    android:viewportHeight="122">
-  <group>
-    <clip-path
-        android:pathData="M0,0h122v122h-122z"/>
-    <path
-        android:pathData="M91.5,30.5V30.55"
-        android:strokeLineJoin="round"
-        android:strokeWidth="10"
-        android:fillColor="#00000000"
-        android:strokeColor="#0F172A"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M91.5,66.08L73.71,40.67C72,37.57 71.12,34.08 71.17,30.54C71.22,27.01 72.19,23.54 73.98,20.5C75.78,17.45 78.34,14.92 81.41,13.17C84.49,11.41 87.96,10.49 91.5,10.49C95.04,10.49 98.51,11.41 101.59,13.17C104.66,14.92 107.22,17.45 109.02,20.5C110.81,23.54 111.78,27.01 111.83,30.54C111.88,34.08 111,37.57 109.29,40.67L91.5,66.08Z"
-        android:strokeLineJoin="round"
-        android:strokeWidth="10"
-        android:fillColor="#00000000"
-        android:strokeColor="#0F172A"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M53.38,24.15L45.75,20.33L15.25,35.58V101.67L45.75,86.42L76.25,101.67L106.75,86.42V76.25"
-        android:strokeLineJoin="round"
-        android:strokeWidth="10"
-        android:fillColor="#00000000"
-        android:strokeColor="#0F172A"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M45.75,20.33V86.42"
-        android:strokeLineJoin="round"
-        android:strokeWidth="10"
-        android:fillColor="#00000000"
-        android:strokeColor="#0F172A"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M76.25,76.25V101.67"
-        android:strokeLineJoin="round"
-        android:strokeWidth="10"
-        android:fillColor="#00000000"
-        android:strokeColor="#0F172A"
-        android:strokeLineCap="round"/>
-  </group>
+    android:width="29dp"
+    android:height="29dp"
+    android:viewportWidth="29"
+    android:viewportHeight="29">
+  <path
+      android:pathData="M9.18,0.435C4.548,1.218 1.579,3.809 0.614,8.461C-0.151,12.149 -0.222,15.862 0.519,19.536C1.433,24.259 4.312,27.138 9.081,27.978C12.499,28.58 15.925,28.573 19.348,27.995C23.963,27.215 27.009,24.363 27.985,19.742C28.713,16.096 28.702,12.407 27.996,8.756C27.083,4.033 24.216,1.291 19.447,0.451C16.029,-0.151 12.604,-0.144 9.18,0.435ZM22,11.875C22,17.537 14,25 14,25C14,25 6,17.537 6,11.875C6,9.786 6.843,7.783 8.343,6.307C9.843,4.83 11.878,4 14,4C16.122,4 18.156,4.83 19.657,6.307C21.157,7.783 22,9.786 22,11.875ZM11.172,14.659C11.922,15.398 12.939,15.813 14,15.813C15.061,15.813 16.078,15.398 16.828,14.659C17.579,13.921 18,12.919 18,11.875C18,10.831 17.579,9.829 16.828,9.091C16.078,8.352 15.061,7.938 14,7.938C12.939,7.938 11.922,8.352 11.172,9.091C10.421,9.829 10,10.831 10,11.875C10,12.919 10.421,13.921 11.172,14.659Z"
+      android:fillColor="#4A4A4A"
+      android:fillType="evenOdd"/>
 </vector>
