--- a/app/src/main/res/drawable/ic_word_profile.xml
+++ b/app/src/main/res/drawable/ic_word_profile.xml
@@ -1,31 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="148dp"
-    android:height="148dp"
-    android:viewportWidth="148"
-    android:viewportHeight="148">
-  <group>
-    <clip-path
-        android:pathData="M0,0h148v148h-148z"/>
-    <path
-        android:pathData="M74,129.5C104.65,129.5 129.5,104.65 129.5,74C129.5,43.35 104.65,18.5 74,18.5C43.35,18.5 18.5,43.35 18.5,74C18.5,104.65 43.35,129.5 74,129.5Z"
-        android:strokeLineJoin="round"
-        android:strokeWidth="10"
-        android:fillColor="#00000000"
-        android:strokeColor="#0F172A"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M74,80.17C84.22,80.17 92.5,71.88 92.5,61.67C92.5,51.45 84.22,43.17 74,43.17C63.78,43.17 55.5,51.45 55.5,61.67C55.5,71.88 63.78,80.17 74,80.17Z"
-        android:strokeLineJoin="round"
-        android:strokeWidth="10"
-        android:fillColor="#00000000"
-        android:strokeColor="#0F172A"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M38.04,116.24C39.56,111.16 42.69,106.7 46.94,103.54C51.2,100.37 56.36,98.67 61.67,98.67H86.33C91.64,98.66 96.81,100.38 101.07,103.55C105.33,106.72 108.46,111.18 109.98,116.27"
-        android:strokeLineJoin="round"
-        android:strokeWidth="10"
-        android:fillColor="#00000000"
-        android:strokeColor="#0F172A"
-        android:strokeLineCap="round"/>
-  </group>
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20">
+  <path
+      android:pathData="M9.75,0C4.374,0 0,4.374 0,9.75C0,15.126 4.374,19.5 9.75,19.5C15.126,19.5 19.5,15.126 19.5,9.75C19.5,4.374 15.126,0 9.75,0ZM9.844,4.5C10.511,4.5 11.164,4.698 11.719,5.069C12.274,5.44 12.706,5.967 12.962,6.583C13.217,7.2 13.284,7.879 13.154,8.533C13.024,9.188 12.702,9.789 12.23,10.262C11.758,10.733 11.157,11.055 10.502,11.185C9.847,11.315 9.169,11.248 8.552,10.993C7.935,10.738 7.408,10.305 7.038,9.75C6.667,9.195 6.469,8.543 6.469,7.875C6.469,6.98 6.824,6.121 7.457,5.489C8.09,4.856 8.949,4.5 9.844,4.5ZM9.75,18C8.612,18 7.486,17.765 6.444,17.308C5.402,16.852 4.466,16.184 3.695,15.347C4.109,13.201 7.831,12.75 9.75,12.75C11.669,12.75 15.391,13.201 15.805,15.346C15.034,16.183 14.098,16.851 13.056,17.308C12.014,17.765 10.888,18 9.75,18Z"
+      android:fillColor="#4A4A4A"/>
 </vector>
