--- a/app/src/main/res/drawable/ic_word_upload.xml
+++ b/app/src/main/res/drawable/ic_word_upload.xml
@@ -1,33 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="123dp"
-    android:height="123dp"
-    android:viewportWidth="123"
-    android:viewportHeight="123">
+    android:width="23dp"
+    android:height="23dp"
+    android:viewportWidth="23"
+    android:viewportHeight="23">
   <path
-      android:pathData="M107,75V100.33C107,103.69 105.93,106.92 104.04,109.29C102.14,111.67 99.57,113 96.89,113H26.11C23.43,113 20.86,111.67 18.96,109.29C17.07,106.92 16,103.69 16,100.33V75"
-      android:fillColor="#D9D9D9"/>
-  <path
-      android:pathData="M107,75V100.33C107,103.69 105.93,106.92 104.04,109.29C102.14,111.67 99.57,113 96.89,113H26.11C23.43,113 20.86,111.67 18.96,109.29C17.07,106.92 16,103.69 16,100.33V75"
-      android:strokeLineJoin="round"
-      android:strokeWidth="10"
-      android:fillColor="#00000000"
-      android:strokeColor="#0F172A"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M87.25,45.63L61.63,20L36,45.63"
-      android:fillColor="#D9D9D9"/>
-  <path
-      android:pathData="M87.25,45.63L61.63,20L36,45.63"
-      android:strokeLineJoin="round"
-      android:strokeWidth="10"
-      android:fillColor="#00000000"
-      android:strokeColor="#0F172A"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M61.63,20L61.63,81.5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="10"
-      android:fillColor="#00000000"
-      android:strokeColor="#0F172A"
-      android:strokeLineCap="round"/>
+      android:pathData="M22.506,0L0,9L8.396,12.797L20.256,2.25L9.709,14.109L13.506,22.5L22.506,0Z"
+      android:fillColor="#4A4A4A"/>
 </vector>
