--- a/app/src/main/res/layout/activity_practice_screen_lock2.xml
+++ b/app/src/main/res/layout/activity_practice_screen_lock2.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/constraint_layout"
     android:layout_height="match_parent"
     android:background="@drawable/screenedu_background"
     tools:context=".learning_space.screen.PracticeScreenLock2Activity">
@@ -50,7 +51,6 @@
 
     <include
         android:id="@+id/include_toolbar"
-
         layout="@layout/included_screen_layout_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
