--- a/app/src/main/res/layout/activity_move_detail.xml
+++ b/app/src/main/res/layout/activity_move_detail.xml
@@ -1,201 +1,143 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgColor1">
 
-    <LinearLayout
+    <View
+        android:id="@+id/icon_green"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="0dp"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:background="@color/eduColor1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintDimensionRatio="H,12:6" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <TextView
+        android:id="@+id/iconedu_tool"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/pretendard_semibold"
+        android:text="1강 기본 동작 교육"
+        android:textColor="@color/white"
+        android:paddingTop="19dp"
+        android:paddingStart="24dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/iconedu_tool_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/pretendard_semibold"
+        android:text="휴대폰의 기본 동작을 학습해보세요."
+        android:textColor="@color/white"
+        android:alpha="0.90"
+        android:letterSpacing="-0.01"
+        android:paddingStart="24dp"
+        android:paddingTop="6dp"
+        app:layout_constraintTop_toBottomOf="@id/iconedu_tool"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/searchIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingStart="24dp"
+        android:layout_marginEnd="0dp"
+        android:paddingEnd="24dp"
+        android:src="@drawable/search_bar"
+        app:layout_constraintTop_toBottomOf="@id/iconedu_tool_2"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="7dp"
+        android:src="@drawable/ic_search_black_24dp"
+        app:layout_constraintStart_toStartOf="@id/searchIcon"
+        app:layout_constraintTop_toTopOf="@id/searchIcon" />
+
+    <EditText
+        android:id="@+id/search_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="7dp"
+        android:background="@null"
+        android:fontFamily="@font/pretendard_regular"
+        android:hint="검색해주세요"
+        android:textColor="#B3000000"
+        app:layout_constraintStart_toStartOf="@id/searchIcon"
+        app:layout_constraintTop_toTopOf="@id/searchIcon" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rounded_bg_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/round_corner_white_2"
+        app:layout_constraintWidth_percent="0.90"
+        app:layout_constraintHeight_percent="0.65"
+        app:layout_constraintTop_toBottomOf="@id/icon_green"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.1"
+        android:layout_marginTop="7dp">
+
+        <TextView
+            android:id="@+id/move_tv_1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/pretendard_semibold"
+            android:letterSpacing="-0.05"
+            android:text="터치"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-            <View
-                android:id="@+id/icon_green"
-                android:layout_width="match_parent"
-                android:layout_height="167dp"
-                android:background="@color/eduColor1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
 
-            <TextView
-                android:id="@+id/iconedu_tool"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/pretendard_semibold"
-                android:text="1강 기본동작 교육"
-                android:textSize="28sp"
-                android:textColor="@color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="19dp"
-                android:layout_marginStart="32dp"/>
+        <ImageView
+            android:id="@+id/move_detail_iv"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/move_tv_1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_percent="0.4"
+            app:layout_constraintHeight_percent="0.3" />
 
-            <TextView
-                android:id="@+id/iconedu_tool_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/pretendard_semibold"
-                android:text="휴대폰의 기본 동작을 익혀보세요."
-                android:textSize="22sp"
-                android:textColor="#E1E1E1"
-                android:letterSpacing="-0.01"
-                app:layout_constraintTop_toBottomOf="@id/iconedu_tool"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="7dp"
-                android:layout_marginStart="32dp"/>
+        <!--원형 넣고 싶으면 이거 바로 위 코드에 넣기 android:background="@drawable/ic_basic_circle"-->
 
-            <ImageView
-                android:id="@+id/searchIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/search_bar"
-                app:layout_constraintTop_toBottomOf="@id/iconedu_tool_2"
-                app:layout_constraintStart_toStartOf="@id/iconedu_tool_2"
-                android:layout_marginTop="10dp"/>
 
-            <ImageView
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:src="@drawable/ic_search_black_24dp"
-                app:layout_constraintTop_toTopOf="@id/searchIcon"
-                app:layout_constraintStart_toStartOf="@id/searchIcon"
-                android:layout_marginTop="7dp"
-                android:layout_marginStart="23dp"/>
-
-            <EditText
-                android:id="@+id/search_edit_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/searchIcon"
-                app:layout_constraintStart_toStartOf="@id/searchIcon"
-                android:fontFamily="@font/pretendard_regular"
-                android:textSize="18sp"
-                android:textColor="#B3000000"
-                android:hint="검색해주세요"
-                android:layout_marginStart="64dp"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <LinearLayout
-            android:id="@+id/itemView"
-            android:layout_width="match_parent"
-            android:layout_height="530dp"
-            android:orientation="vertical"
-            android:gravity="center_horizontal"
-            android:background="@drawable/round_corner_white_2"
-            android:layout_margin="24dp">
-
-            <TextView
-                android:id="@+id/move_tv_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="36dp"
-                android:fontFamily="@font/pretendard_semibold"
-                android:textColor="@color/black"
-                android:text="터치"
-                android:letterSpacing="-0.05"
-                android:layout_marginTop="20dp"/>
-
-            <ImageView
-                android:id="@+id/move_detail_iv"
-                android:layout_width="147dp"
-                android:layout_height="147dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/light_grey"
-                app:layout_constraintTop_toBottomOf="@id/icon_tv_2" />
-
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/move_detail_iv"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@color/bgColor3"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp"
+            app:layout_constraintWidth_percent="0.938"
+            app:layout_constraintHeight_percent="0.5">
 
             <TextView
                 android:id="@+id/move_tv_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/pretendard_medium"
+                android:padding="8dp"
                 android:text="text"
-                android:fontFamily="@font/pretendard_regular"
-                android:textColor="@color/black"
-                android:letterSpacing="-0.03"
-                android:padding="10dp"
-                android:layout_margin="10dp"
-                android:textSize="30sp"
-                android:background="@color/bgColor3"
-                android:layout_gravity="center"
-                />
-
-
-        </LinearLayout>
-        <!--나중에 영상을 제작할때 사용할 코드-->
-        <!--
-        <LinearLayout
-            android:id="@+id/clip"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:orientation="vertical"
-            android:gravity="center_horizontal"
-            android:background="@drawable/round_corner_white_2"
-            android:layout_marginTop="7dp">
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/itemView"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/round_corner_white_2"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/move_detail_iv"
-                    android:layout_width="147dp"
-                    android:layout_height="147dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="26dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/light_grey"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/move_tv_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="50dp"
-                    android:gravity="center"
-                    android:fontFamily="@font/pretendard_semibold"
-                    android:letterSpacing="-0.05"
-                    android:text="터치"
-                    android:textColor="@color/black"
-                    android:textSize="36dp"
-                    app:layout_constraintStart_toEndOf="@id/move_detail_iv"
-                    app:layout_constraintTop_toTopOf="@id/move_detail_iv" />
-
-                <TextView
-                    android:id="@+id/move_tv_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/pretendard_regular"
-                    android:letterSpacing="-0.03"
-                    android:padding="10dp"
-                    android:text="text"
-                    android:textColor="@color/black"
-                    android:textSize="30sp"
-                    app:layout_constraintStart_toStartOf="@id/move_detail_iv"
-                    app:layout_constraintTop_toBottomOf="@id/move_detail_iv" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        </LinearLayout>-->
-    </LinearLayout>
-</LinearLayout>
+                android:textColor="@color/black" />
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
