디테일 수정

--- a/app/src/main/res/layout/activity_basicedu_main.xml
+++ b/app/src/main/res/layout/activity_basicedu_main.xml
@@ -75,4 +75,16 @@
             android:padding="20dp" /> <!-- 패딩을 16dp에서 20dp로 증가 -->
     </LinearLayout>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/mainNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemBackground="@color/white"
+        app:itemIconTint="@drawable/menu_click_color"
+        app:itemTextColor="@drawable/menu_click_color"
+        app:menu="@menu/main_navi_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
