[feat] PRACTICE TEST

--- a/app/src/main/res/layout/activity_practice_web_view.xml
+++ b/app/src/main/res/layout/activity_practice_web_view.xml
@@ -33,10 +33,12 @@
 
         </LinearLayout>
 
+
         <!-- 여기에 웹뷰 추가 -->
         <WebView
             android:id="@+id/webView"
             android:layout_width="match_parent"
+            android:layout_marginHorizontal="20dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
