--- a/app/src/main/res/layout/activity_practice_app_move2.xml
+++ b/app/src/main/res/layout/activity_practice_app_move2.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back1"
     tools:context=".learning_space.screen.PracticeAppMove2Activity">
 
     <LinearLayout
@@ -54,6 +53,7 @@
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="20dp"
         android:background="@drawable/screenedu_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll">
