--- a/app/src/main/res/layout/activity_practice_screen_lock_practice.xml
+++ b/app/src/main/res/layout/activity_practice_screen_lock_practice.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/screenedu_background">
-
+    android:layout_height="match_parent">
     <!-- LinearLayout at the top -->
     <LinearLayout
         android:id="@+id/ll"
@@ -49,7 +47,14 @@
             android:padding="16dp"/>
     </LinearLayout>
 
-
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rootLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/screenedu_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll">
     <!-- 툴바 포함 -->
     <include
         android:id="@+id/include_toolbar"
@@ -132,4 +137,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+</androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
