--- a/app/src/main/res/layout/activity_practice_top_bar.xml
+++ b/app/src/main/res/layout/activity_practice_top_bar.xml
@@ -52,6 +52,7 @@
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintTop_toBottomOf="@id/ll"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/screenedu_background">
